--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-native": "0.63.3",
     "react-native-flash-message": "^0.1.17",
     "react-native-gesture-handler": "^1.8.0",
+    "react-native-image-picker": "^2.3.4",
     "react-native-reanimated": "^1.13.1",
     "react-native-safe-area-context": "^3.1.8",
     "react-native-screens": "^2.12.0",
